userChromeTabs.css
/* 　/ //　/　/　　RainFox v0.5 　//　/ /　　// ☔ Based on MaterialFox and QuietFox | 2019-2021 */

/* proton-ish tabs (not disconnected from tabbar anymore; no tab-line; roundness) */
.tabbrowser-tab {
	background-color: transparent !important; background-clip: padding-box;
	overflow: hidden !important;
}
.tabbrowser-tab[multiselected], .tabbrowser-tab[visuallyselected="true"] {
	border-top-left-radius: var(--userChrome-tab-rounding) !important; border-top-right-radius: var(--userChrome-tab-rounding) !important;
}
.tab-background, .tab-loading-burst  {
	border-radius: var(--userChrome-tab-rounding) var(--userChrome-tab-rounding) 0px 0px !important;
	margin-bottom: -2px !important; /* change this value to make tabs smaller/bigger (container stripes will be broken!!). min = -5; max = 0 */
}

/* make gaps between tabs a little bit smaller without breaking the shadow (works only with unpinned tabs) */
.tabbrowser-tab:not([pinned]) {
	margin-inline: -1px !important; /* make gap between bats a little bit smallet without breaking the shadow */
}

/* force tabs to use toolbar colors -- ENABLE for better default themes; DISABLE for max compatibility with Australis custom themes */
#tabbrowser-tabs:not([movingtab]) > #tabbrowser-arrowscrollbox > .tabbrowser-tab > .tab-stack > .tab-background[multiselected="true"]:-moz-lwtheme, #tabbrowser-tabs:not([movingtab]) > #tabbrowser-arrowscrollbox > .tabbrowser-tab > .tab-stack > .tab-background[selected="true"]:-moz-lwtheme {
	background: var(--toolbar-bgcolor) !important;
}

/* small gap between pinned and regular tabs */
#tabbrowser-tabs[haspinnedtabs]:not([positionpinnedtabs]) > #tabbrowser-arrowscrollbox > .tabbrowser-tab[first-visible-unpinned-tab] {
	margin-inline-start: 6px !important;
}

/* tab and tabbar shadows (not sure how to treat colorful shadows so they're simply disabled for now) */
#TabsToolbar #tabbrowser-tabs:not([noshadowfortests]) .tabbrowser-tab:is([visuallyselected="true"], [multiselected]) > .tab-stack > .tab-background:-moz-lwtheme {
	box-shadow: 0 0 0px var(--tab-line-color), 0 0 var(--userChrome-tabbar-shadow) 1px var(--tabs-border-color) !important;
}
/* remove shadows and "flatten" the tabs if window is inactive (seem to be broken by Firefox devs lol) 
#TabsToolbar[brighttext] #tabbrowser-tabs:not([noshadowfortests]) .tabbrowser-tab:is([visuallyselected="true"], [multiselected]) > .tab-stack > .tab-background:-moz-lwtheme {
	box-shadow: 0 0 0px var(--tab-line-color), 0 0 2px 1px var(--tabs-border-color) !important;
}
#TabsToolbar:not([brighttext]) #tabbrowser-tabs:not([noshadowfortests]) .tabbrowser-tab:is([visuallyselected="true"], [multiselected]) > .tab-stack > .tab-background {
	box-shadow: 0 0 1px var(--tab-line-color) !important;
}/**/
#nav-bar {
	box-shadow: 0 -1px var(--userChrome-tabbar-shadow) var(--tabs-border-color) !important;
}

/* tabbar border -- ENABLE for max compatibility with Australis custom themes; DISABLE to get maximally clean UI 
#navigator-toolbox {
	--tabs-border-color: var(--urlbar-box-bgcolor) !important;
}
#nav-bar {
	box-shadow: 0 -1px 0 var(--tabs-border-color) !important;
}/**/

/* overflow buttons */
#scrollbutton-up, #scrollbutton-down {
	padding: calc(var(--toolbarbutton-inner-padding) - 4px) calc(var(--toolbarbutton-inner-padding) - 8px) !important;
}

/* old-styled ctrl buttons (currently located at left, try to change to the classic look indafuture) */
.tab-secondary-label {
	display: none !important;
}
.tab-icon-overlay {
	opacity: inherit !important;
}
.titlebar-button {
	padding: 6px 17px;
}
.tab-icon-overlay:not([pinned], [sharing], [crashed]):is([soundplaying], [muted], [activemedia-blocked]) {
	background-color: color-mix(in srgb, currentColor 30%, #9990);
	border-radius: 1280px !important;
	margin-top: -1px !important; margin-bottom: -1px !important; margin-inline-end: 4.5px !important;
	padding: 3px !important; 
}
#TabsToolbar .tab-icon-overlay:is([pinned], [sharing]):not([crashed]) {
	background-color: color-mix(in srgb, currentColor 30%, #9990);
	border-radius: 1280px !important;
	stroke: none !important;
	color: currentColor !important;
}
.tab-icon-overlay:not([pinned], [sharing], [crashed]):is([soundplaying], [muted], [activemedia-blocked]):hover, #TabsToolbar .tab-icon-overlay:is([pinned], [sharing]):not([crashed]):hover, .tab-close-button:hover {
	background-color: color-mix(in srgb, currentColor 15%, #9990) !important;
}
.tab-icon-overlay:not([pinned], [sharing], [crashed]):is([soundplaying], [muted], [activemedia-blocked]):hover:active, #TabsToolbar .tab-icon-overlay:is([pinned], [sharing]):not([crashed]):hover:active, .tab-close-button:hover:active {
	background-color: color-mix(in srgb, currentColor 45%, #9990) !important;
}
.tab-icon-overlay:not([pinned]) {
	width: 19px !important;	height: 19px !important;
	margin-left: -2px !important;
}

/* close button */
.tab-close-button {
	padding: 4px !important;
	border-radius: 1280px !important;
	width: 21px !important;	height: 21px !important;
}

